--- a/grams/templates/assetbrandview.html
+++ b/grams/templates/assetbrandview.html
@@ -24,16 +24,16 @@
                 {% endif %}
                 <table class="info-table">
                     <tr>
-                        <td><b>Name</b></td>
-                        <td>{{ brands_view.name }}</td>
+                        <td class= "left-align"><b>Name</b></td>
+                        <td class= "right-align">{{ brands_view.name }}</td>
                     </tr>
                     <tr>
-                        <td><b>Date Added</b></td>
-                        <td>{{ brands_view.date_added }}</td>
+                        <td class= "left-align"><b>Date Added</b></td>
+                        <td class= "right-align">{{ brands_view.date_added }}</td>
                     </tr>
                     <tr>
-                        <td><b>Description</b></td>
-                        <td>{{ brands_view.description }}</td>
+                        <td class= "left-align"><b>Description</b></td>
+                        <td class= "right-align">{{ brands_view.description }}</td>
                     </tr>
                 </table>
             </div>
