--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -23,20 +23,20 @@
                 {% endif %}
                 <table class="info-table">
                     <tr>
-                        <td><b>Name</b></td>
-                        <td>{{ branch_view.name }}</td>
+                        <td class= "left-align"><b>Name</b></td>
+                        <td class= "right-align">{{ branch_view.name }}</td>
                     </tr>
                     <tr>
-                        <td><b>Code</b></td>
-                        <td>{{ branch_view.code }}</td>
+                        <td class= "left-align"><b>Code</b></td>
+                        <td class= "right-align">{{ branch_view.code }}</td>
                     </tr>
                     <tr>
-                        <td><b>Company</b></td>
-                        <td>{{ branch_view.company }}</td>
+                        <td class= "left-align"><b>Company</b></td>
+                        <td class= "right-align">{{ branch_view.company }}</td>
                     </tr>
                     <tr>
-                        <td><b>Location</b></td>
-                        <td>{{ branch_view.location }}</td>
+                        <td class= "left-align"><b>Location</b></td>
+                        <td class= "right-align">{{ branch_view.location }}</td>
                     </tr>
                 </table>
             </div>
