--- a/grams/templates/companyview.html
+++ b/grams/templates/companyview.html
@@ -23,20 +23,20 @@
                 {% endif %}
                 <table class="info-table">
                     <tr>
-                        <td><b>ID</b></td>
-                        <td>{{ company_view.id }}</td>
+                        <td class= "left-align"><b>ID</b></td>
+                        <td class= "right-align">{{ company_view.id }}</td>
                     </tr>
                     <tr>
-                        <td><b>Name</b></td>
-                        <td>{{ company_view.name }}</td>
+                        <td class= "left-align"><b>Name</b></td>
+                        <td class= "right-align">{{ company_view.name }}</td>
                     </tr>
                     <tr>
-                        <td><b>Date Added</b></td>
-                        <td>{{ company_view.date_added }}</td>
+                        <td class= "left-align"><b>Date Added</b></td>
+                        <td class= "right-align">{{ company_view.date_added }}</td>
                     </tr>
                     <tr>
-                        <td><b>Owners</b></td>
-                        <td>{{ company_view.owners }}</td>
+                        <td class= "left-align"><b>Owners</b></td>
+                        <td class= "right-align">{{ company_view.owners }}</td>
                     </tr>
                 </table>
             </div>
