--- a/grams/static/dashboard.css
+++ b/grams/static/dashboard.css
@@ -104,15 +104,24 @@ a.btn-revalue {
 }
 
 .info-table tr {
-    height: 15px;
+    height: 25px;
     padding: 3px;
-    width: 50%;
+    
 }
 
 .info-table td {
-    padding: 3px;
+    padding: 6px;
 }
 
+.left-align {
+    text-align: right;
+    width: 60%;
+}
+
+.right-align {
+    text-align: left;
+    width: 100%
+}
 /* Show All Link */
 
 .showall {margin: 0; padding-top: 15px;}
