--- a/grams/templates/assetcategoryview.html
+++ b/grams/templates/assetcategoryview.html
@@ -2,7 +2,7 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'editpage.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 {% endblock page_css %}
 
 {% block content %}
@@ -23,16 +23,16 @@
                 {% endif %}
                 <table class="info-table">
                     <tr>
-                        <td><b>Name</b></td>
-                        <td>{{ categories_view.name }}</td>
+                        <td class= "left-align"><b>Name</b></td>
+                        <td class= "right-align">{{ categories_view.name }}</td>
                     </tr>
                     <tr>
-                        <td><b>Date Added</b></td>
-                        <td>{{ categories_view.date_added }}</td>
+                        <td class= "left-align"><b>Date Added</b></td>
+                        <td class= "right-align">{{ categories_view.date_added }}</td>
                     </tr>
                     <tr>
-                        <td><b>Description</b></td>
-                        <td>{{ categories_view.description }}</td>
+                        <td class= "left-align"><b>Description</b></td>
+                        <td class= "right-align">{{ categories_view.description }}</td>
                     </tr>
                 </table>
             </div>
