--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -4,7 +4,6 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 {% endblock page_css %}
-
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
@@ -22,38 +21,38 @@
                     </div>
                 {% endif %}
 
-                    <table class="info-table">
+                    <table class="info-table" >
                         <tr>
-                            <td><b>ID</b></td>
-                            <td>{{ asset_view.id }}</td>
+                            <td class= "left-align"><b>ID</b></td>
+                            <td class= "right-align">{{ asset_view.id }}</td>
                         </tr>
                         <tr>
-                            <td><b>Date Added</b></td>
-                            <td>{{ asset_view.date_added }}</td>
+                            <td class= "left-align"><b>Date Added</b></td>
+                            <td class= "right-align">{{ asset_view.date_added }}</td>
                         </tr>
                         <tr>
-                            <td><b>Category</b></td>
-                            <td>{{ asset_view.category }}</td>
+                            <td class= "left-align"><b>Category</b></td>
+                            <td class= "right-align">{{ asset_view.category }}</td>
                         </tr>
                         <tr>
-                            <td><b>Brand</b></td>
-                            <td>{{ asset_view.brand }}</td>
+                            <td class= "left-align"><b>Brand</b></td>
+                            <td class= "right-align">{{ asset_view.brand }}</td>
                         </tr>
                         <tr>
-                            <td><b>Status</b></td>
-                            <td>{{ asset_view.status }}</td>
+                            <td class= "left-align"><b>Status</b></td>
+                            <td class= "right-align">{{ asset_view.status }}</td>
                         </tr>
                         <tr>
-                            <td><b>Model Number</b></td>
-                            <td>{{ asset_view.model_no }}</td>
+                            <td class= "left-align"><b>Model Number</b></td>
+                            <td class= "right-align">{{ asset_view.model_no }}</td>
                         </tr>
                         <tr>
-                            <td><b>Serial Number</b></td>
-                            <td>{{ asset_view.serial_no }}</td>
+                            <td class= "left-align"><b>Serial Number</b></td>
+                            <td class= "right-align">{{ asset_view.serial_no }}</td>
                         </tr>
                         <tr>
-                            <td><b>Description</b></td>
-                            <td>{{ asset_view.description }}</td>
+                            <td class= "left-align"><b>Description</b></td>
+                            <td class= "right-align">{{ asset_view.description }}</td>
                         </tr>
                     </table>
             </div>
@@ -62,11 +61,20 @@
                 <h2>
                     <i class="fas fa-chart-line"></i>&nbsp; Estimated Cost
                 </h2>
-
-                <b>Acquisition Cost: </b>Php {{ asset_view.acquisition_cost }}<br/>
-                <b>Salvage Value: </b>Php {{ asset_view.salvage_value }}<br/>
-                <b>Projected Life: </b>{{ asset_view.project_life }} Months<br/>
-                
+                    <table class="info-table" >
+                        <tr>
+                            <td class= "left-align"><b>Acquisition Cost: </b></td>
+                            <td class= "right-align">Php {{ asset_view.acquisition_cost }}</td>
+                        </tr>
+                        <tr>
+                            <td class= "left-align"><b>Salvage Value: </b></td>
+                            <td class= "right-align">Php {{ asset_view.salvage_value }}</td>
+                        </tr>
+                        <tr>
+                            <td class= "left-align"><b>Projected Life: </b></td>
+                            <td class= "right-align">{{ asset_view.project_life }} Months<br/></td>
+                        </tr>
+                    </table>
             </div>
         </div>
 
