New depreciation algo

--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -66,6 +66,7 @@
                 <b>Acquisition Cost: </b>Php {{ asset_view.acquisition_cost }}<br/>
                 <b>Salvage Value: </b>Php {{ asset_view.salvage_value }}<br/>
                 <b>Projected Life: </b>{{ asset_view.project_life }} Months<br/>
+                <b>Book Value: </b>{{ asset_view.balance }} Months<br/>
                 
             </div>
         </div>
