--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -31,6 +31,10 @@
                             <td class= "right-align">{{ asset_view.date_added }}</td>
                         </tr>
                         <tr>
+                            <td class= "left-align"><b>Date Acquired</b></td>
+                            <td class= "right-align">{{ asset_view.date_acquired }}</td>
+                        </tr>
+                        <tr>
                             <td class= "left-align"><b>Category</b></td>
                             <td class= "right-align">{{ asset_view.category }}</td>
                         </tr>
@@ -83,7 +87,7 @@
         </div>
 
         <div class="row container-fluid">
-            <div class="col-sm-7">
+            <div class="col-sm">
                 <h2>
                     <i class="fas fa-money-bill-wave"></i>&nbsp; Depreciation
                 </h2>
@@ -123,7 +127,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             {% for trail in audit_trail %}
-                                <div class="col-1-sm">
+                                <div class="col-sm">
                                     <!-- icon --><i class="far fa-clock"></i>
                                 </div>
                                 <div class="col">
