--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="row container-fluid">
-            <div class="col-sm-7">
+            <div class="col-sm">
                 <h2>
                     <i class="fas fa-money-bill-wave"></i>&nbsp; Depreciation
                 </h2>
