--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -11,7 +11,7 @@
     </div>
 
         <div class="row container-fluid">
-            <div class="col-sm">
+            <div class="col-sm viewbox">
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
                 </h2>
@@ -102,10 +102,18 @@
                     </thead>
 
                     <tbody>
+                    
+                    {% for x in asset_view.it_dep_date %}
                         <tr>
-                            <td>{{ asset_view.it_dep_date }}</td>
-                            <td>{{ asset_view.it_accrued }}</td>
-                            <td>{{ asset_view.it_balance }}</td>
+                            <td>{{ x }}</td>
+                    {% endfor %}
+
+                    {% for y in asset_view.it_accrued  %}
+                            <td>{{ y }}</td>
+                    {% endfor %}
+
+                    
+                    
                         </tr>
                     </tbody>
                 </table>
