--- a/grams/templates/companyview.html
+++ b/grams/templates/companyview.html
@@ -3,6 +3,12 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+    <link rel="stylesheet" type="text/css" 
+    href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css"
+    href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" 
+    href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.2/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/r-2.2.2/datatables.min.css"/>
 {% endblock page_css %}
 
 {% block content %}
@@ -11,7 +17,7 @@
         <h1>{{ company_view.name }}</h1>
     </div>
 
-        <div class="row container-fluid">
+        <div class="container-fluid">
             <div class="col-sm">
                 <h2>
                     <i class="fas fa-info-circle"></i>&nbsp; Information
@@ -40,59 +46,59 @@
                     </tr>
                 </table>
             </div>
-
-            <div class="col-sm">
-                <h2>
-                    <i class="fas fa-chart-line"></i>&nbsp; Branches
-                </h2>
-                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search branches..">
-                <table id = "myTable" class="table table-striped">
-                    <thead>
-                        <tH>Code</th>
-                        <th>Name</th>
-                        <th>Location</th>
-                    </thead>
-                    {% for branch in branches %}
-                        <tr>
-                            <td>{{ branch.code }}</td>
-                            <td>{{ branch.name }}</td>
-                            <td>{{ branch.location }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
+        </div>
+            <div class="container-fluid"  style="overflow-x:auto;">
+                <div class="col-sm">
+                    <h2>
+                        <i class="fas fa-chart-line"></i>&nbsp; Branches
+                    </h2>
+                    <table id = "myTable" class="table table-striped">
+                        <thead>
+                            <th>Code</th>
+                            <th>Name</th>
+                            <th>Location</th>
+                        </thead>
+                        <tbody style="overflow-y:auto;">
+                        {% for branch in branches %}
+                            <tr>
+                                <td>{{ branch.code }}</td>
+                                <td><a href="{% url 'branch-view' branch.id %}">{{ branch.name }}</a></td>
+                                <td>{{ branch.location }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
 {% block js %}
-                <script>
-                    function myFunction() {
-                    var input, filter, table, tr, td, i;
-                    input = document.getElementById("myInput");
-                    filter = input.value.toUpperCase();
-                    table = document.getElementById("myTable");
-                    tr = table.getElementsByTagName("tr");
-                        for (i = 0; i < tr.length; i++) {
-                        td = tr[i].getElementsByTagName("td")[0];
-                        if (td) {
-                            if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
-                            tr[i].style.display = "";
-                            } else {
-                            tr[i].style.display = "none";
-                            }
-                        }       
-                    }
-                    for (i = 1; i < tr.length; i++) {
-                            tr[i].style.display = "none";
-                            td = tr[i].getElementsByTagName("td");
-                    for (var j = 0; j < td.length; j++) {
-                    cell = tr[i].getElementsByTagName("td")[j];
-                        if (cell) {
-                            if (cell.innerHTML.toUpperCase().indexOf(filter) > -1) {
-                            tr[i].style.display = "";
-                            break;
-                            } 
-                        }
-                    }
+    <script type="text/javascript">
+        $(document).ready( function () {
+            $('#myTable').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                    'copy', 'csv', 'excel', 'pdf', 'print'
+                ]
+            });
+        } );
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#myTable tr').click(function() {
+            var href = $(this).find("a").attr("href");
+                if(href) {
+                    window.location = href;
                 }
-                }
-                </script>
+            });
+        });  
+    </script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>           
 {% endblock js %}    
             </div>
         </div>
