--- a/grams/static/tables.css
+++ b/grams/static/tables.css
@@ -59,7 +59,7 @@ input[type="date"] {
 
 .table-striped>tbody>tr:nth-child(even)>td,
 .table-striped>tbody>tr:nth-child(even)>th {
-    background: rgba(217, 219, 217, 0.7)
+    background: rgb(235, 234, 234);
 }
 
 /*.btn {
