--- a/grams/static/breadcrumbs.css
+++ b/grams/static/breadcrumbs.css
@@ -1,10 +1,24 @@
-.active {
-    font-weight: bold;
+ul.breadcrumb {
+    padding: 10px 16px;
+    list-style: none;
+    background-color: #eee;
+  }
+  
+  /* Display list items side by side */
+  ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+  }
+  
+  /* Add a slash symbol (/) before/behind each list item */
+  ul.breadcrumb li+li:before {
+    padding: 8px;
     color: black;
-}
-li {
-    color: gray;
-}
-.bread {
-    background-color: white;
-}
+    content: "/\00a0";
+  }
+  
+  /* Add a color to all links inside the list */
+  ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+  }
