Added it_dep_value field, updated dep table

--- a/grams/templates/assettable.html
+++ b/grams/templates/assettable.html
@@ -28,6 +28,8 @@
                             <th>STATUS</th>
                             <th>CATEGORY</th>
                             <th>BRAND</th>
+                            <th>MODEL NO.</th>
+                            <th>SPECIFICATIONS</th>
                             <th>BRANCH</th>
                     </thead>
                     
@@ -41,6 +43,8 @@
                             <td>{{ asset.status }}</td>
                             <td>{{ asset.category }}</td>
                             <td>{{ asset.brand }}</td>
+                            <td>{{ asset.model_no }}</td>
+                            <td>{{ asset.specifications }}</td>
                             <td>{{ asset.branch }}</td>
                         </tr>
                     {% endfor %}
