--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -3,6 +3,7 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
     <link rel="stylesheet" type="text/css" 
     href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
@@ -13,7 +14,11 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h1>{{ asset_view.name }}</h1>
+        <ul class="breadcrumb">
+            <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="inactive"><a href="{% url 'asset-table' %}">Asset Table</a></li>
+            <li class="active">{{ asset_view.name }}</a></li>
+        </ul>
     </div>
 
         <div class="row container-fluid">
