--- a/grams/templates/vendorsarchive.html
+++ b/grams/templates/vendorsarchive.html
@@ -3,6 +3,7 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'tables.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
     <link rel="stylesheet" type="text/css" 
         href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
@@ -15,7 +16,10 @@
 <section id="main" class="content">
         
     <div class="titlepage">
-        <h1>Archived Vendors</h1> 
+        <ul class="breadcrumb">
+            <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="active">Archived Vendors</a></li>
+        </ul>> 
     </div>
 
     <div style="overflow-x:auto;"> 
