--- a/grams/templates/addcompany.html
+++ b/grams/templates/addcompany.html
@@ -3,12 +3,16 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content add-form">
     <div class="titlepage">
-        <h1>Add Company</h1>
+        <ul class="breadcrumb">
+            <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="active">Add Branch</a></li>
+          </ul>
     </div>
 
     <form method="POST" action="">
