--- a/grams/templates/assetbrand.html
+++ b/grams/templates/assetbrand.html
@@ -3,6 +3,7 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'tables.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
     <link rel="stylesheet" type="text/css" 
         href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
@@ -16,20 +17,13 @@
         
     <div class="titlepage">
         <form class="form-inline">
-            <h1>Brands</h1> 
+            <ul class="breadcrumb2">
+                <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+                <li class="active">Asset Brand Table</a></li>
+              </ul>
             <button type="button" class="btn" onclick="window.location.href='{% url 'asset-brands-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
     </div>
-
-    <form class="form-inline" style="margin-bottom: 15px">
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white;"><i class="fas fa-file-pdf"></i>EXPORT PDF</button>
-        </div>
-
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white "><i class="fas fa-file-csv"></i> EXPORT CSV</button>
-        </div>
-    </form>
 
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
