neilbaduel, to push breadcrumbs

--- a/grams/templates/branches.html
+++ b/grams/templates/branches.html
@@ -20,7 +20,7 @@
             <div class="titlepage">
                 <ul class="breadcrumb">
                     <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-                    <li class="active">Branch Table</a></li>
+                    <li class="active">Asset Branch Table</a></li>
                   </ul>
         </form>
     </div>
