--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -17,7 +17,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="inactive"><a href="{% url 'branch-table' %}">branch Table</a></li>
+            <li class="inactive"><a href="{% url 'branch-table' %}">Asset Branch Table</a></li>
             <li class="active">{{ branch_view.name }}</a></li>
         </ul>
     </div>
