--- a/grams/templates/vendors.html
+++ b/grams/templates/vendors.html
@@ -18,7 +18,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="active">Vendor Table</a></li>
+            <li class="active">Asset Vendor Table</a></li>
           </ul>
     </div>
     <a href="{% url 'vendors-add' %}" class="btn neutral">Add</a> <a href="{% url 'archive-vendors-table' %}" class="btn critical">Display Archive</a>
