--- a/grams/templates/assetcategory.html
+++ b/grams/templates/assetcategory.html
@@ -19,7 +19,7 @@
         <form class="form-inline">
             <ul class="breadcrumb">
                 <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-                <li class="active"><a href="{% url 'asset-table' %}"></a>Category Table</a></li>
+                <li class="active"><a href="{% url 'asset-table' %}"></a>Asset Category Table</a></li>
             </ul>
                 <button type="button" class="btn" onclick="window.location.href='{% url 'asset-categories-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
