--- a/grams/templates/companies.html
+++ b/grams/templates/companies.html
@@ -18,7 +18,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="active">Company Table</a></li>
+            <li class="active">Asset Company Table</a></li>
           </ul>
     </div>
 
