--- a/grams/templates/companyview.html
+++ b/grams/templates/companyview.html
@@ -17,7 +17,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="inactive"><a href="{% url 'company-table' %}">Company Table</a></li>
+            <li class="inactive"><a href="{% url 'company-table' %}">Asset Company Table</a></li>
             <li class="active">{{ company_view.name }}</a></li>
         </ul>
     </div>
