--- a/grams/templates/editasset.html
+++ b/grams/templates/editasset.html
@@ -3,7 +3,7 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
-    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">        
 {% endblock page_css %}
 
 {% block content %}
@@ -12,8 +12,8 @@
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
             <li class="inactive"><a href="{% url 'asset-table' %}">Asset Table</a></li>
-            <li class="inactive"><a href="{% url 'asset-view' asset.id %}">Asset</a></li>
-            <li class="active">Edit Information</li>
+            <li class="inactive"><a href="{% url 'asset-view' asset.id %}">{{ asset.name }}</a></li>
+            <li class="active">Edit {{ asset.name }} Information</li>
 
         </ul>
     </div>
