--- a/grams/templates/editcompany.html
+++ b/grams/templates/editcompany.html
@@ -3,12 +3,19 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content add-form">
     <div class="titlepage">
-        <h1>Edit Company</h1>
+        <ul class="breadcrumb">
+            <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="inactive"><a href="{% url 'company-table' %}">Asset Company Table</a></li>
+            <li class="inactive"><a href="{% url 'company-view' company.id %}">{{ company.name }}</a></li>
+            <li class="active">Edit {{ company.name }} Information</li>
+
+        </ul>
     </div>
 
     <form method="POST" action="">
