--- a/grams/templates/revalue.html
+++ b/grams/templates/revalue.html
@@ -3,12 +3,19 @@
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
+    <link rel="stylesheet" href="{% static 'breadcrumbs.css' %}">
 {% endblock page_css %}
 
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h1>Revalue</h1>
+        <ul class="breadcrumb">
+            <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="inactive"><a href="{% url 'asset-table' %}">Asset Table</a></li>
+            <li class="inactive"><a href="{% url 'asset-view' asset.id %}">{{ asset.name }}</a></li>
+            <li class="active">Revalue {{ asset.name }}</li>
+
+        </ul>
     </div>
 
     <div class="row">
