--- a/grams/templates/vendorsarchive.html
+++ b/grams/templates/vendorsarchive.html
@@ -18,7 +18,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="active">Archived Vendors</a></li>
+            <li class="active">Archived Asset Vendors</a></li>
         </ul>> 
     </div>
 
