--- a/grams/templates/vendorview.html
+++ b/grams/templates/vendorview.html
@@ -11,7 +11,7 @@
     <div class="titlepage">
         <ul class="breadcrumb">
             <li class = "inactive"><a href="{% url 'dashboard' %}">Home</a></li>
-            <li class="inactive"><a href="{% url 'vendors-table' %}">Vendor Table</a></li>
+            <li class="inactive"><a href="{% url 'vendors-table' %}">Asset Vendor Table</a></li>
             <li class="active">{{ vendor_view.name }}</a></li>
         </ul>
     </div>
