--- a/grams/templates/dashboard.html
+++ b/grams/templates/dashboard.html
@@ -103,6 +103,7 @@
                                     by user <b>transactions.user_id</b>.
                                 </div>
                             </div>
+                            <!--
                             <div class="row">
                                 <ul>
                                     <li class="date">
@@ -121,7 +122,7 @@
                                         <a href="perbranch.html">branch_dest</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
 
