--- a/grams/templates/queue.html
+++ b/grams/templates/queue.html
@@ -17,7 +17,9 @@
                     <tr>
                         <th>ID</th>
                         <th>TYPE</th>
+                        <th>DATE ADDED</th>
                         <th>DESCRIPTION</th>
+                        <th>ASSETS</th>
                     </tr>
                 </thead>
 
@@ -35,7 +37,13 @@
                                 Recover
                             {% endif %}
                         </td>
+                        <td>{{ transaction.date_added }}</td>
                         <td>{{ transaction.description }}</td>
+                        <td>
+                            {% for asset in transaction.assets_transact.all %}
+                                {{ asset }}
+                            {% endfor %}
+                        </td>
                     </tr>
                 {% endfor %}
 
