--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -149,51 +149,58 @@
                 </h2>
 
                 <!-- ra 1 -->
-                <div class="tablebox">
-                    <div class="container-fluid">
-                        {% for trail in audit_trail|slice:":5" %}
+                {% for trail in audit_trail|slice:":5" %}
+                    <div class="tablebox">
+                        <div class="container-fluid">
                             <div class="row">
-                                    <div class="col-1-sm">
-                                        <!-- icon --><i class="far fa-clock"></i>
-                                    </div>
-                                    <div class="col-sm">
-                                        {{ trail.description }}
-                                    </div>
+                                <div class="col-1-sm">
+                                    {% if trail.ttype == '1' %}
+                                        <i class="far fa-clock"></i>
+                                    {% endif %}
+                                    {% if trail.ttype == '2' %}
+                                        <i class="fas fa-exchange-alt"></i>
+                                    {% endif %}
+                                    {% if trail.ttype == '3' %}
+                                        <i class="far fa-trash-alt"></i>
+                                    {% endif %}
+                                    {% if trail.ttype == '4' %}
+                                        <i class="fas fa-undo-alt"></i>
+                                    {% endif %}
+                                </div>
+                                <div class="col">
+                                    {{ trail.description }}
+                                </div>
                             </div>
-                        {% endfor %}
-                        <!--
-                        <div class="row">
-                            <ul>
-                                <li class="date">
-                                    2018/11/15 13:00
-                                </li>
-                                <li class="critical">
-                                    past due
-                                </li>
-                                <li class="neutral">
-                                    asset#43215678
-                                </li>
-                            </ul>
+                            <div class="row">
+                                <ul>
+                                    <li class="date">
+                                        {{ trail.date_added }}
+                                    </li>
+                                    <li class="neutral">
+                                        transaction#{{ trail.id }}
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        -->
                     </div>
-                </div>
-            {% block js %}
-                <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-                <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-                <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
-                <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
-                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-                <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
-                <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
-            {% endblock js %}
+                {% endfor %}
 
             </div>
         </div>
 
 </section>
+
+{% block js %}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
+{% endblock js %}
 
 <div class="footer">
     {% if asset_view.display == '1' %}
