--- a/grams/static/tables.css
+++ b/grams/static/tables.css
@@ -1,4 +1,3 @@
-
 .titlepage .btn {
     height: 35px;
     background:rgb(44, 40, 40);
@@ -59,7 +58,7 @@ input[type="date"] {
 
 .table-striped>tbody>tr:nth-child(even)>td,
 .table-striped>tbody>tr:nth-child(even)>th {
-    background: rgb(235, 234, 234);
+    background: rgb(235, 234, 234, 0.7);
 }
 
 /*.btn {
@@ -76,10 +75,14 @@ a.btn {
     padding: 5px;
     border-radius: 5px;
     margin-bottom: 15px;
-    margin-top: 10px;
-    margin-left: 9px;
+    margin-top: 20px;
+    margin-left: 2px;
     font-size: 1em;
     color: #fff;
+}
+
+.add-btn {
+    width: 57px;
 }
 
 button.btn {
@@ -129,9 +132,19 @@ a {
 }
 
 #myTable tbody tr:hover { 
-    background: rgb(141, 139, 139) !important;
-    cursor: pointer !important; }
-
-.btn .copy {
-    background-color: #1B5E20;
+    background: rgb(189, 185, 185) !important;
+    cursor: pointer !important; 
 }
+
+.dt-button.copy, .dt-button.csv, .dt-button.excel, .dt-button.pdf, .dt-button.print  {
+    color: white;
+    background: #2E7D32;
+    width:60px;
+    border-radius: 5px;
+}
+
+
+
+
+
+
