--- a/grams/templates/assetbrand.html
+++ b/grams/templates/assetbrand.html
@@ -17,19 +17,10 @@
     <div class="titlepage">
         <form class="form-inline">
             <h1>Brands</h1> 
-            <button type="button" class="btn" onclick="window.location.href='{% url 'asset-brands-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
     </div>
 
-    <form class="form-inline" style="margin-bottom: 15px">
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white;"><i class="fas fa-file-pdf"></i>EXPORT PDF</button>
-        </div>
-
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white "><i class="fas fa-file-csv"></i> EXPORT CSV</button>
-        </div>
-    </form>
+    <a href="{% url 'asset-brands-add' %}" class="btn neutral add-btn">Add</a>
 
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
@@ -57,7 +48,11 @@
                 $('#myTable').DataTable({
                     dom: 'Bfrtip',
                     buttons: [
-                        'copy', 'csv', 'excel', 'pdf', 'print'
+                        { extend: 'copy',  className: 'copy'},  
+                        { extend: 'csv', className: 'csv'},  
+                        { extend: 'excel', className: 'excel'},  
+                        { extend: 'pdf',  className: 'pdf'},  
+                        { extend: 'print', className: 'print'} 
                     ]
                 });
             } );
