--- a/grams/templates/assetcategory.html
+++ b/grams/templates/assetcategory.html
@@ -17,20 +17,11 @@
     <div class="titlepage">
         <form class="form-inline">
             <h1>Categories</h1> 
-            <button type="button" class="btn" onclick="window.location.href='{% url 'asset-categories-add' %}'" style="background:  #2E7D32; color: white; margin-bottom:5px ; margin-left:15px">ADD</button> 
         </form>
     </div>
+
+    <a href="{% url 'asset-categories-add' %}" class="btn neutral add-btn">Add</a>
     
-    <form class="form-inline" style="margin-bottom: 15px">
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white;"><i class="fas fa-file-pdf"></i>EXPORT PDF</button>
-        </div>
-
-        <div class="form-group">
-            <button type="button" class="btn" style="background:  #2E7D32; color: white "><i class="fas fa-file-csv"></i> EXPORT CSV</button>
-        </div>
-    </form>
-
     <div style="overflow-x:auto;"> 
         <table class="table table-striped" id="myTable"> 
             <thead>
@@ -58,12 +49,16 @@
                 $('#myTable').DataTable({
                     dom: 'Bfrtip',
                     buttons: [
-                        'copy', 'csv', 'excel', 'pdf', 'print'
+                        { extend: 'copy',  className: 'copy'},  
+                        { extend: 'csv', className: 'csv'},  
+                        { extend: 'excel', className: 'excel'},  
+                        { extend: 'pdf',  className: 'pdf'},  
+                        { extend: 'print', className: 'print'} 
                     ]
                 });
             } );
         </script>
-        
+
         <script type="text/javascript">
             $(document).ready(function() {
                 $('#myTable tr').click(function() {
