Login, logout, asset date field forms

--- a/grams/templates/addasset.html
+++ b/grams/templates/addasset.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+<!--{% load crispy_forms_tags %}-->
 {% block page_css %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'forms.css' %}">
