--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -92,7 +92,7 @@
                                     </a>
                                     
                                     <!-- something -->
-                                    <a class="notification-content" href="index.html">
+                                    <a class="notification-content" href="{% url 'logout' %}">
                                         <div class="notification-item">
                                             <span class="item-title">Log Out</span>
                                         </div>
@@ -104,7 +104,7 @@
     
     
                         <!-- start log out -->
-                        <a class="userbtn" href="index.html">
+                        <a class="userbtn" href="{% url 'logout' %}">
                             <i class="fas fa-power-off"></i>
                         </a>
                         <!-- end log out -->
