--- a/grams/templates/logout.html
+++ b/grams/templates/logout.html
@@ -25,15 +25,8 @@
         <div class="container"><div class="box">
             <div class="login">
                 <h1>GRAMS</h1>
-                <form method="POST">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <input type="submit" value="Log In">
-                </form>
-                <!--
-                <div class="addLink">
-                    <a href="changepassword.html">Change Password</a>
-                </div>-->
+                <h2>Logged out.</h2>
+                You have been logged out. <a href="{% url 'login' %}">Log back in?</a>
             </div>
         </div></div>
 
