--- a/grams/templates/dashboard.html
+++ b/grams/templates/dashboard.html
@@ -8,7 +8,7 @@
 {% block content %}
     <section id="main" class="content">
         <div class="titlepage">
-            <h1>Hello user.name </h1>
+            <h1>Hello, {{ user.username }}</h1>
         </div>
 
         <div class="container-fluid">
