--- a/grams/templates/assetcategoryview.html
+++ b/grams/templates/assetcategoryview.html
@@ -39,6 +39,10 @@
                         <td class= "right-align">{{ categories_view.name }}</td>
                     </tr>
                     <tr>
+                        <td class= "left-align"><b>Created By</b></td>
+                        <td class= "right-align">{{ categories_view.created_by }}</td>
+                    </tr>
+                    <tr>
                         <td class= "left-align"><b>Date Added</b></td>
                         <td class= "right-align">{{ categories_view.date_added }}</td>
                     </tr>
