--- a/grams/templates/assetview.html
+++ b/grams/templates/assetview.html
@@ -38,6 +38,10 @@
                             <td>{{ asset_view.id }}</td>
                         </tr>
                         <tr>
+                            <td><b>Created By</b></td>
+                            <td>{{ asset_view.created_by }}</td>
+                        </tr>
+                        <tr>
                             <td><b>Date Added</b></td>
                             <td>{{ asset_view.date_added }}</td>
                         </tr>
