--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -49,6 +49,10 @@
                         <td class= "left-align"><b>Location</b></td>
                         <td class= "right-align">{{ branch_view.location }}</td>
                     </tr>
+                     <tr>
+                        <td class= "left-align"><b>Created By</b></td>
+                        <td class= "right-align">{{ branch_view.created_by }}</td>
+                    </tr>
                 </table>
             </div>
         </div>
