--- a/grams/templates/vendorview.html
+++ b/grams/templates/vendorview.html
@@ -36,6 +36,10 @@
                         <td>{{ vendor_view.name }}</td>
                     </tr>
                     <tr>
+                        <td><b>Created By</b></td>
+                        <td>{{ vendor_view.created_by }}</td>
+                    </tr>
+                    <tr>
                         <td><b>Date Added</b></td>
                         <td>{{ vendor_view.date_added }}</td>
                     </tr>
